feat/main-bart create controller for Category and mapper